--- a/perfilCliente.css
+++ b/perfilCliente.css
@@ -59,3 +59,11 @@ body {
     background-color: #4E3A97;
 }
 
+.rodape{
+    background-color: #512DA8;
+    height: 60px;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 18px;
+}
